docs: redesign plan around two-tree (order-key coupled) B+ backing
Replaces the single position-tree design with two coordinated, count-augmented
B+ trees coupled by a stable long order-key (Johnny's original container sketch):
a no-boxing primitive int->long value index (recordId -> container order-key) and
an order-key-keyed, count-augmented position tree whose leaves are containers.

Both descend by key (cursor model, no parent pointers) so value->position lookup
rides ordinary key descent and full structural sharing is preserved: O(log N)
everything incl. O(e.log N) commits. Adds INV-COUPLE (order-key coherence) and
mandates a dedicated primitive int->long tree flavour over a boxed <Long> value.

Ref: #760